# files_dump

./: .env.example  .gitignore  .gitlab-ci.yml  README.md  docker-compose.yaml  pyproject.toml
docker/: Dockerfile  dockerize.sh
src/: app.py
src/api/: __init__.py  dump.py
src/controller/: controller.py
src/core/: dependencies.py  exceptions.py
src/core/config/: settings.py
src/db/alembic/: env.py
src/templates/: success.html  upload.html
